syntax = "proto3";
package kv.v1;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;

message StoragePutArgs {
    bytes tab = 1;
    bytes key = 2;
    bytes val = 3;
}

message StoragePutReply {
    string err = 1;
}

message StorageGetArgs {
    int32 lvl = 1; // consistency level
    bytes tab = 2;
    bytes key = 3;
}

message StorageGetReply {
    bytes  val = 1;
    string err = 2;
}

message StorageDeleteArgs {
    bytes tab = 1;
    bytes key = 2;
}

message StorageDeleteReply {
    string err = 1;
}

// This rpc call used to redirect opetation to raft leader
service Storage {
    rpc Put(StoragePutArgs) returns (StoragePutReply);
    rpc Get(StorageGetArgs) returns (StorageGetReply);
    rpc Delete(StorageDeleteArgs) returns (StorageDeleteReply);
}
